@@ -187,15 +187,6 @@
         <download/>
       </component>
     </version>
-    <version release="gnome-2.4">
-      <component name="bonobo-activation" dir="bonobo-activation" group="developer-libs">
-        <podir dir="po"/>
-        <potname name="bonobo-activation.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
   </module>
   <module name="bonobo-conf">
     <version release="gnome-1.4">
