@@ -1,3 +1,8 @@
+2003-05-13  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: bonobo-activation removed from GNOME 2.4.
+	  (it is merged into libbonobo HEAD)
+
 2003-05-09  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Move gnome-chess to GNOME 2.4, it has
